implemented budgetr's login activity.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryText">#000000</color>
-    <color name="secondaryText">#993C3C43</color>
-    <color name="tertiaryText">#4D3C3C43</color>
-    <color name="primaryBorder">#213C3C43</color>
-    <color name="secondaryBorder">#4A3C3C43</color>
-    <color name="tertiaryBorder">#000000</color>
-    <color name="primaryBackground">#FFFFFF</color>
-    <color name="secondaryBackground">#EFEFF4</color>
-    <color name="tertiaryBackground">#DBDBDB</color>
+    <color name="darkGreen">#004234</color>
+    <color name="mainGreen">#0B9C58</color>
+    <color name="mintGreen">#AFFC41</color>
+    <color name="magenta">#CF2383</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#0B0A07</color>
 </resources>
