--- a/app/src/main/res/layout/fragment_shoppinglist.xml
+++ b/app/src/main/res/layout/fragment_shoppinglist.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/Inter-Medium"
+        android:fontFamily="@font/inter_medium"
         android:text="Shopping List"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
