--- a/app/src/main/res/drawable/ic_logo.xml
+++ b/app/src/main/res/drawable/ic_logo.xml
@@ -1,39 +1,42 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="215dp"
-    android:height="85dp"
-    android:viewportWidth="215"
-    android:viewportHeight="85">
+    android:width="153.32dp"
+    android:height="46.08dp"
+    android:viewportWidth="153.32"
+    android:viewportHeight="46.08">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M122.6,30.1c-1,-0.2 -2,-0.3 -3.1,-0.3c-1.4,0 -2.7,0.2 -4,0.6c-1.2,0.3 -2.3,0.9 -3.2,1.7c-0.9,0.7 -1.6,1.6 -2.1,2.6c-0.5,1.1 -0.8,2.2 -0.8,3.4c0,1.4 0.3,2.9 1.1,4.1c0.7,1.2 1.8,2.1 3,2.8c-0.5,0.3 -1,0.6 -1.5,1c-0.4,0.3 -0.7,0.7 -1,1.1c-0.3,0.4 -0.5,0.8 -0.6,1.2c-0.1,0.4 -0.2,0.8 -0.2,1.2c0,0.8 0.2,1.6 0.6,2.3c0.4,0.6 1,1.1 1.6,1.4c-1.1,0.4 -2.2,1.1 -3,1.9c-0.7,0.8 -1.1,1.9 -1.1,3c0,0.9 0.2,1.8 0.7,2.5c0.5,0.9 1.2,1.6 2.1,2.2c1.1,0.7 2.3,1.2 3.5,1.5c1.6,0.4 3.3,0.6 5,0.6c1.8,0 3.5,-0.2 5.2,-0.8c1.4,-0.4 2.7,-1.1 3.9,-2c1,-0.8 1.8,-1.7 2.4,-2.8c0.5,-1 0.8,-2.1 0.8,-3.3c0,-1 -0.2,-2.1 -0.7,-3c-0.5,-0.8 -1.1,-1.4 -1.9,-1.8c-0.8,-0.5 -1.7,-0.8 -2.7,-1c-1,-0.2 -2,-0.4 -3,-0.4c-1,-0.1 -2.1,-0.1 -3.1,-0.2c-0.9,0 -1.8,-0.1 -2.7,-0.2c-0.7,-0.1 -1.3,-0.2 -1.9,-0.5c-0.4,-0.2 -0.7,-0.7 -0.7,-1.1c0,-0.6 0.4,-1.1 1.2,-1.6c0.4,0.1 0.9,0.2 1.4,0.2c0.5,0 1,0.1 1.4,0.1c1.3,0 2.7,-0.2 3.9,-0.6c1.1,-0.4 2.2,-0.9 3.2,-1.7c0.9,-0.7 1.6,-1.6 2.1,-2.6c0.5,-1.1 0.8,-2.2 0.8,-3.4c0,-1 -0.2,-2 -0.5,-2.9l2.3,-0.4c0.9,-0.2 1.3,-0.6 1.3,-1.3v-2.3h-7.3C124.4,30.6 123.5,30.3 122.6,30.1zM116,54.2c0.8,0.1 1.6,0.2 2.4,0.2l2.4,0.1c0.8,0 1.5,0.1 2.2,0.2c0.6,0.1 1.2,0.2 1.8,0.4c0.5,0.1 0.9,0.4 1.2,0.7c0.3,0.3 0.5,0.8 0.5,1.2c0,0.5 -0.1,1 -0.4,1.4c-0.3,0.5 -0.7,0.8 -1.2,1.1c-0.6,0.3 -1.3,0.6 -2,0.7c-1,0.2 -2,0.3 -3,0.3c-1,0 -1.9,-0.1 -2.8,-0.2c-0.7,-0.1 -1.3,-0.3 -1.9,-0.7c-0.4,-0.2 -0.8,-0.6 -1.1,-1c-0.2,-0.4 -0.3,-0.8 -0.3,-1.3c0,-0.7 0.2,-1.3 0.6,-1.8C114.8,55 115.4,54.5 116,54.2zM123.8,39.9L123.8,39.9c-0.2,0.5 -0.5,1 -0.9,1.3c-0.4,0.4 -0.9,0.7 -1.4,0.9c-1.3,0.4 -2.7,0.4 -4,0c-0.5,-0.2 -1,-0.5 -1.4,-0.9c-0.4,-0.4 -0.7,-0.8 -0.8,-1.3c-0.2,-0.5 -0.3,-1.1 -0.2,-1.7c-0.1,-1.1 0.4,-2.2 1.1,-3c2,-1.5 4.8,-1.5 6.8,0c0.8,0.8 1.2,1.9 1.1,3C124.1,38.8 124,39.4 123.8,39.9z"/>
+      android:pathData="M70.12,8.45h2.95v6.7a10.67,10.67 0,0 1,-6.58 2.13c-5.2,0 -9,-3.62 -9,-8.64S61.29,0 66.54,0a8.7,8.7 0,0 1,6.75 2.74l-2,1.92a6.23,6.23 0,0 0,-4.63 -1.92,5.75 5.75,0 0,0 -6.1,5.9 5.78,5.78 0,0 0,6.07 5.91,6.75 6.75,0 0,0 3.46,-0.87Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M98,32.2c-0.8,-0.8 -1.7,-1.4 -2.7,-1.8c-1.2,-0.5 -2.4,-0.7 -3.6,-0.7c-1.6,0 -3.1,0.3 -4.5,1c-1.3,0.7 -2.5,1.6 -3.5,2.8c-1,1.3 -1.7,2.7 -2.2,4.3c-0.5,1.7 -0.8,3.5 -0.8,5.3c0,1.9 0.2,3.8 0.7,5.6c0.4,1.5 1,2.9 1.9,4.1c0.8,1.1 1.8,1.9 3,2.5c1.2,0.6 2.5,0.9 3.8,0.9c1.6,0 3.2,-0.3 4.7,-1.1c1.3,-0.7 2.5,-1.7 3.5,-2.9l0.5,2.5c0.2,0.7 0.8,1.2 1.5,1.1h3.8V18.7H98V32.2zM98,48.2c-0.7,0.9 -1.6,1.7 -2.5,2.3c-1,0.6 -2.1,0.8 -3.3,0.8c-0.7,0 -1.5,-0.1 -2.2,-0.4c-0.7,-0.3 -1.2,-0.8 -1.6,-1.4c-0.5,-0.8 -0.8,-1.6 -1,-2.5c-0.3,-1.3 -0.4,-2.5 -0.4,-3.8c0,-1.3 0.1,-2.6 0.4,-3.9c0.2,-1 0.6,-1.9 1.2,-2.7c0.5,-0.7 1.2,-1.2 1.9,-1.5c0.8,-0.4 1.6,-0.5 2.5,-0.5c0.9,0 1.8,0.2 2.7,0.5c0.9,0.4 1.6,1 2.2,1.8V48.2z"/>
+      android:pathData="M84.3,4.08V6.94a3.66,3.66 0,0 0,-0.69 -0.08c-2.29,0 -3.72,1.35 -3.72,4V17h-3V4.22h2.86V6.1C80.61,4.75 82.17,4.08 84.3,4.08Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M42,37.2c1,-0.3 2,-0.8 2.9,-1.4c0.8,-0.5 1.4,-1.1 2,-1.8c0.5,-0.7 0.9,-1.4 1.1,-2.2c0.2,-0.8 0.4,-1.6 0.4,-2.4c0,-1.4 -0.2,-2.7 -0.8,-4c-0.5,-1.2 -1.3,-2.2 -2.3,-3c-1.2,-0.9 -2.6,-1.6 -4.1,-1.9c-2,-0.5 -4,-0.7 -6,-0.7H22.8v36.1h13.6c1.9,0 3.8,-0.2 5.6,-0.8c1.5,-0.5 2.9,-1.2 4.1,-2.2c1.1,-0.9 2,-2.1 2.5,-3.4c0.6,-1.3 0.9,-2.8 0.9,-4.3C49.4,41 46.9,38.3 42,37.2zM29.4,24.9h5.7c1.8,-0.1 3.5,0.3 5,1.2c1.1,1 1.7,2.5 1.6,4c0.1,1.5 -0.5,3.1 -1.8,4c-1.6,0.9 -3.4,1.4 -5.2,1.3h-5.3V24.9zM42.4,47.2c-0.2,0.7 -0.6,1.3 -1.1,1.8c-0.6,0.5 -1.3,1 -2,1.2c-1,0.3 -2.1,0.5 -3.1,0.5h-6.8V40h6.7c1,0 2,0.1 3,0.3c0.7,0.2 1.4,0.5 2,1c0.5,0.4 1,1 1.2,1.7c0.3,0.7 0.4,1.4 0.4,2.1C42.8,45.8 42.7,46.5 42.4,47.2z"/>
+      android:pathData="M85.67,10.63a6.45,6.45 0,0 1,6.82 -6.55c4,0 6.84,2.71 6.84,6.55a6.83,6.83 0,0 1,-13.66 0ZM96.3,10.63a3.81,3.81 0,1 0,-7.61 0,3.81 3.81,0 1,0 7.61,0Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M69.9,48.8c-0.8,0.8 -1.7,1.5 -2.6,2c-0.9,0.5 -2,0.7 -3,0.7c-1.2,0.1 -2.4,-0.4 -3.2,-1.3c-0.8,-1 -1.2,-2.3 -1.1,-3.6V30.2h-6.1v16.3c0,1.3 0.2,2.7 0.5,3.9c0.3,1.1 0.9,2.2 1.7,3.1c0.7,0.9 1.6,1.6 2.7,2c1.2,0.5 2.4,0.7 3.7,0.7c1.5,0 3.1,-0.3 4.4,-1c1.3,-0.7 2.4,-1.5 3.5,-2.6l0.4,2c0.2,0.7 0.8,1.2 1.5,1.1H76V30.2h-6.1V48.8z"/>
+      android:pathData="M101.15,10.63c0,-3.84 2.88,-6.55 6.93,-6.55a5.77,5.77 0,0 1,5.48 3L111.25,8.4a3.63,3.63 0,0 0,-3.19 -1.78,3.76 3.76,0 0,0 -3.89,4 3.75,3.75 0,0 0,3.89 4,3.62 3.62,0 0,0 3.19,-1.77l2.31,1.34a5.84,5.84 0,0 1,-5.48 3C104,17.21 101.15,14.47 101.15,10.63Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M157.6,43.3c0.3,-0.6 0.4,-1.2 0.3,-1.9c0,-1.7 -0.3,-3.4 -0.8,-4.9c-0.5,-1.4 -1.3,-2.6 -2.3,-3.6c-1,-1 -2.2,-1.8 -3.5,-2.3c-1.4,-0.5 -2.9,-0.8 -4.4,-0.8c-1.8,0 -3.5,0.3 -5.1,1c-1.5,0.6 -2.8,1.6 -3.9,2.7c-1.1,1.2 -1.9,2.5 -2.4,4c-0.6,1.6 -0.9,3.3 -0.9,4.9c0,2 0.3,4 1,5.9c0.6,1.6 1.5,3.1 2.7,4.3c1.1,1.2 2.5,2.1 4,2.6c1.6,0.6 3.3,0.9 4.9,0.9c0.9,0 1.9,-0.1 2.8,-0.2c1,-0.1 1.9,-0.4 2.8,-0.7c0.9,-0.3 1.8,-0.8 2.6,-1.3c0.9,-0.5 1.6,-1.2 2.3,-2l-1.8,-2.3c-0.2,-0.4 -0.7,-0.6 -1.1,-0.6c-0.4,0 -0.8,0.1 -1.2,0.3c-0.4,0.2 -0.9,0.5 -1.4,0.8c-0.6,0.3 -1.2,0.6 -1.9,0.8c-0.8,0.3 -1.7,0.4 -2.6,0.4c-0.9,0 -1.9,-0.1 -2.8,-0.4c-0.8,-0.3 -1.5,-0.8 -2.1,-1.4c-0.6,-0.7 -1.1,-1.5 -1.4,-2.4c-0.4,-1.1 -0.6,-2.3 -0.7,-3.4h15.8C156.9,43.9 157.4,43.7 157.6,43.3zM140.9,40.1c0.2,-1.6 0.8,-3.1 1.9,-4.3c1.8,-1.5 4.4,-1.9 6.6,-1.1c0.7,0.3 1.2,0.7 1.7,1.3c0.5,0.6 0.8,1.2 1,1.9c0.2,0.7 0.3,1.5 0.3,2.3L140.9,40.1z"/>
+      android:pathData="M128,11.59L117.9,11.59a3.88,3.88 0,0 0,4.15 3.08,4.58 4.58,0 0,0 3.48,-1.4l1.61,1.85A6.49,6.49 0,0 1,122 17.21c-4.29,0 -7.08,-2.76 -7.08,-6.58a6.38,6.38 0,0 1,6.63 -6.55A6.26,6.26 0,0 1,128 10.71C128,10.94 128,11.31 128,11.59ZM117.92,9.59h7.27a3.49,3.49 0,0 0,-3.62 -3.12A3.54,3.54 0,0 0,117.88 9.6Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M175.2,50.6c-0.1,-0.1 -0.3,-0.1 -0.4,-0.1c-0.2,0 -0.3,0.1 -0.4,0.1l-0.5,0.3c-0.2,0.1 -0.4,0.2 -0.7,0.3c-0.3,0.1 -0.6,0.1 -1,0.1c-0.6,0 -1.2,-0.2 -1.6,-0.7c-0.4,-0.5 -0.6,-1.2 -0.6,-1.9V34.8h6.8v-4.4H170v-8.1h-3.2c-0.3,0 -0.6,0.1 -0.9,0.3c-0.2,0.2 -0.4,0.5 -0.5,0.8l-1.3,7l-4.1,0.7v2.5c0,0.4 0.1,0.7 0.4,1c0.2,0.2 0.5,0.3 0.8,0.3h2.6v14.3c-0.1,1.9 0.5,3.8 1.8,5.2c1.4,1.3 3.2,2 5.1,1.9c1.2,0 2.4,-0.2 3.6,-0.6c1.1,-0.4 2.2,-0.9 3.1,-1.7l-1.8,-3C175.5,50.8 175.4,50.7 175.2,50.6z"/>
+      android:pathData="M138.3,4.08V6.94a3.66,3.66 0,0 0,-0.69 -0.08c-2.29,0 -3.72,1.35 -3.72,4V17h-3V4.22h2.86V6.1C134.61,4.75 136.17,4.08 138.3,4.08Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M189.4,31c-1.2,1 -2.1,2.2 -2.8,3.6l-0.4,-2.9c0,-0.4 -0.2,-0.9 -0.5,-1.2c-0.4,-0.3 -0.8,-0.4 -1.3,-0.3h-3.6v25.7h6.1V40c0.3,-0.6 0.6,-1.2 0.9,-1.8c0.3,-0.5 0.7,-1 1.1,-1.4c0.4,-0.4 0.9,-0.7 1.4,-0.9c0.6,-0.2 1.2,-0.3 1.8,-0.3c0.5,0 1,0 1.4,0.1c0.4,0.1 0.7,0.1 1.1,0.1c0.2,0 0.5,0 0.6,-0.2c0.2,-0.2 0.3,-0.4 0.4,-0.6l0.4,-4.6c-0.8,-0.5 -1.8,-0.8 -2.8,-0.8C191.8,29.7 190.5,30.1 189.4,31z"/>
+      android:pathData="M153.32,4.22l-6,13.85c-1.17,2.91 -2.8,3.8 -4.94,3.8A5.31,5.31 0,0 1,139 20.69l1.2,-2.21a3.25,3.25 0,0 0,2.21 0.89c1,0 1.68,-0.5 2.25,-1.78l0.22,-0.5L139.24,4.22h3.12l4,9.49 4.05,-9.49Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M24.9,2.5C25,1.7 25,0.8 25,0H0v25c0.8,0 1.7,0 2.5,-0.1C14.3,23.7 23.7,14.3 24.9,2.5z"/>
+      android:pathData="M88.82,37.25h3V44a10.67,10.67 0,0 1,-6.58 2.13c-5.21,0 -9,-3.62 -9,-8.64S80,28.8 85.24,28.8A8.66,8.66 0,0 1,92 31.54l-2,1.92a6.27,6.27 0,0 0,-4.64 -1.92,5.91 5.91,0 1,0 0,11.81 6.75,6.75 0,0 0,3.46 -0.87Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M2.5,60.1C1.7,60 0.8,60 0,60v25h25c0,-0.8 0,-1.7 -0.1,-2.5C23.7,70.7 14.3,61.3 2.5,60.1z"/>
+      android:pathData="M103,32.88v2.86a3.68,3.68 0,0 0,-0.7 -0.07c-2.28,0 -3.72,1.34 -3.72,4v6.21h-3V33h2.86V34.9C99.3,33.55 100.86,32.88 103,32.88Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M190,0c0,0.8 0,1.7 0.1,2.5c1.2,11.8 10.5,21.2 22.4,22.4c0.8,0.1 1.7,0.1 2.5,0.1V0H190z"/>
+      android:pathData="M116.2,38.33v7.51h-2.83L113.37,44.28c-0.72,1.11 -2.12,1.73 -4,1.73 -2.93,0 -4.77,-1.61 -4.77,-3.84s1.44,-3.82 5.33,-3.82h3.31v-0.19c0,-1.75 -1.06,-2.78 -3.19,-2.78a6.36,6.36 0,0 0,-3.89 1.27l-1.18,-2.19a9.05,9.05 0,0 1,5.42 -1.58C114.06,32.88 116.2,34.63 116.2,38.33ZM113.2,41.83L113.2,40.35h-3.1c-2,0 -2.59,0.76 -2.59,1.7s0.91,1.78 2.45,1.78A3.28,3.28 0,0 0,113.2 41.83Z"
+      android:fillColor="#469f3d"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M190.1,82.5c-0.1,0.8 -0.1,1.7 -0.1,2.5h25V60c-0.8,0 -1.7,0 -2.5,0.1C200.7,61.3 191.3,70.7 190.1,82.5z"/>
+      android:pathData="M133.65,39.43A6.24,6.24 0,0 1,127.14 46a5.3,5.3 0,0 1,-4.25 -1.82v1.65L120,45.83L120,28h3v6.55a5.32,5.32 0,0 1,4.1 -1.7A6.23,6.23 0,0 1,133.65 39.43ZM130.6,39.43a3.81,3.81 0,1 0,-7.61 0,3.81 3.81,0 1,0 7.61,0Z"
+      android:fillColor="#469f3d"/>
+  <path
+      android:pathData="M13.25,36.38a4.42,4.42 0,1 0,4.42 4.41A4.4,4.4 0,0 0,13.25 36.38ZM0,1V5.46H4.42l8,16.76 -3,5.41a4.22,4.22 0,0 0,-0.56 2.12,4.43 4.43,0 0,0 4.42,4.42h26.5V29.75H14.18a0.54,0.54 0,0 1,-0.55 -0.55l0.06,-0.27 2,-3.6H32.13A4.39,4.39 0,0 0,36 23.06L43.9,8.73a2.14,2.14 0,0 0,0.27 -1.06A2.22,2.22 0,0 0,42 5.46H9.3L7.22,1ZM35.33,36.38a4.42,4.42 0,1 0,4.42 4.41A4.4,4.4 0,0 0,35.33 36.38Z"
+      android:fillColor="#469f3d"/>
 </vector>
