--- a/app/src/main/res/layout/splashscreen_layout.xml
+++ b/app/src/main/res/layout/splashscreen_layout.xml
@@ -16,13 +16,13 @@
         />
 
     <TextView
+        android:id="@+id/version_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/version_text"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="13dp"
-        android:text="v0.1  |   Made by Joseph Vitko"
+        android:text="v0.1  |   Made by the Smith Bois"
         android:textColor="@color/white"
         android:textSize="13sp" />
 
