--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="uiGreen">#469F3D</color>
     <color name="uiOrange">#F0681E</color>
     <color name="uiRed">#FF3B30</color>
+    <color name="clear">#00F44336</color>
 </resources>
