--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -23,24 +23,45 @@
         android:id="@+id/chooseItemText2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:completionThreshold="0"
         android:ems="10"
         android:fontFamily="@font/roboto"
-        android:hint="Enter an item"
+        android:hint="Pick a nearby store"
         android:inputType="textPersonName"
         android:popupBackground="@color/secondaryBackground"
         android:textAlignment="viewStart"
         android:textColor="@color/primaryText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/back_btn2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/back_btn2"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:background="@drawable/back_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/chooseItemText"
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_btn"
+        android:elevation="30dp"
+        android:text="Start AR Mode"
+        android:textAllCaps="false"
+        android:textColor="@color/primaryBackground"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view4" />
+
+    <View
+        android:id="@+id/fade_rectangle2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:background="@drawable/fade_rectangle"
+        android:elevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
