--- a/app/src/main/res/layout/post_test_layout.xml
+++ b/app/src/main/res/layout/post_test_layout.xml
@@ -9,7 +9,17 @@
         android:id="@+id/post_test_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="207dp" />
+        android:text="post" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/get_test_button"
+        android:text="get"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/create_cart_button"
+        android:text="create cart"/>
+
 </LinearLayout>
