updated map/ar fragment page

--- a/app/src/main/res/drawable/login_button_bg.xml
+++ b/app/src/main/res/drawable/login_button_bg.xml
@@ -3,6 +3,6 @@
 
     <corners android:radius="20dp"/>
 
-    <solid android:color="@color/magenta"/>
+    <solid android:color="@color/uiPink"/>
 
 </shape>
